(4.2.5p195) 2009/07/27 Released by Harlan Stenn <stenn@ntp.org>
* cvo.sh: Add support for CentOS, Fedora, Slackware, SuSE.
(4.2.5p194) 2009/07/26 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Use scripts/cvo.sh in the build script to get better subdir names.
(4.2.5p193) 2009/07/25 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1261] CID 34: simulate_server() rbuf.msg_flags uninitialized.
* [Bug 1262] CID 35: xpkt.mac uninitialized in simulate_server().
* [Bug 1263] CID 37: CID 38: CID 40: CID 43: multiple refclocks 
  uninitialized tm_zone (arc, chronolog, dumbclock, pcf).
* [Bug 1264] CID 64: gsoc_sntp on_wire() frees wrong ptr receiving KoD.
* [Bug 1265] CID 65: CID 66: gsoc_sntp on_wire() leaks x_pkt, r_pkt.
* [Bug 1266] CID 39: datum_pts_start() uninitialized arg.c_ospeed.
* [Bug 1267] CID 44: old sntp handle_saving() writes stack garbage to
  file when clearing.
* [Bug 1268] CID 63: resolve_hosts() leaks error message buffer.
* [Bug 1269] CID 74: use assertion to ensure move_fd() does not return
  negative descriptors.
* [Bug 1270] CID 70: gsoc_sntp recv_bcst_data mdevadr.ipv6mr_interface
  uninitialized.
(4.2.5p192) 2009/07/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 965] CID 42: ss_family uninitialized.
* [Bug 1250] CID 53: kod_init_kod_db() overruns kod_db malloc'd buffer.
* [Bug 1251] CID 68: search_entry() mishandles dst argument.
* [Bug 1252] CID 32: Quiet Coverity warning with assertion.
* [Bug 1253] CID 50: gsoc_sntp/crypto.c auth_init() always returns a 
  list with one entry.
* [Bug 1254] CID 56: tv_to_str() leaks a struct tm each call.
* [Bug 1255] CID 55: pkt_output() leaks a copy of each packet.
* [Bug 1256] CID 51: Coverity doesn't recognize our assertion macros as
  terminal.
* [Bug 1257] CID 57: gsoc_sntp auth_init() fails to fclose(keyfile).
* [Bug 1258] CID 54: gsoc_sntp resolve_hosts() needs simplification.
* [Bug 1259] CID 59: gsoc_sntp recv_bcast_data() fails to free(rdata)
  on error paths.